refactor(layouts): fixed the position of main

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,7 +64,7 @@ const url = Astro.site
 
       main {
         max-width: min(64rem, 100%);
-        margin-inline: 1rem;
+        margin-inline: auto;
         z-index: 0;
         gap: 1rem;
         display: flex;
